# ratatat

./: CONTRIBUTING.md  Cargo.toml  README.md
proptest-regressions/parsers/: numbe.txt
samples/kdl/: Cargo.toml
samples/kdl/src/: lib.rs
samples/kdl/src/kdl_input/: fancy.kdl
samples/kdl/src/snapshots/: kdl__tests__kdl_snapshot@fancy.kdl.snap  kdl__tests__kdl_snapshot@simple.kdl.snap
src/: input.rs  lib.rs  tracing.rs
src/batteries/: bool.rs  char.rs  mod.rs
src/parsers/: and.rs  array.rs  bool.rs  char.rs  filter.rs  fnparser.rs  many.rs  map.rs  memo.rs  mod.rs  named.rs  not.rs  numbe.rs  opt.rs  parse.rs  ptr.rs  range.rs  recognize.rs  sep.rs  slice.rs  str.rs  string.rs  then.rs  tuple.rs  vec.rs
tests/: json.rs
tests/snapshots/: json__parse_json@example.json.snap
