[package]
name = "ratatat"
version = "0.1.0"
authors = ["harri <0@hclarke.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.0.0"
bstr = "0.2.16"
elsa = { git = "https://github.com/Manishearth/elsa.git" }
insta = { version = "1.7.1", features = ["ron", "glob"] }
srcstr = { git = "https://github.com/hclarke/srcstr.git", branch="main"  }

[dev-dependencies]
indexmap = {version = "1.6.2", features=["serde-1"] }
serde = "1.0.126"
